--- a/FinTrack/package.json
+++ b/FinTrack/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.1",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.12.0",
+    "sweetalert2": "^11.26.18",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
